- Add "leverage" command (uses lapack) to detect leverage points
  and influential observations for a given model
- Fix "diff" and "ldiff" commands for panel data sets (i.e.
  show missing values as missing)
- Fix bug in editing of varnames and labels (could get onto
  the wrong line in some cases)
- Fix gretl's startup routine for Gnu R so that it never over-
  writes the file .Profile

04/09/03 version 1.0.7
- Correct the attribution of autocorrelation test (Breusch-Godfrey
  rather than Breusch-Pagan)
- Fix bug in display of remote database info line (Gtk-2.0 version)
- Use a finer step-size for Hildreth-Lu search
- In GUI program, display Hildreth-Lu plot using gnuplot
- Translate a few more untranslated strings
- Fix bug in title of residual graph
- When the user installs a local copy of a remote database,
  give the option of opening it right away
- Add "coeffsum" command: gives the sum of coefficients, and 
  standard error of the sum, for selected independent variables
  in a given model
- Modify the White's test function, so that it doesn't fall over 
  when a variable and its square are among the original regressors
- Fix drag and drop of data files and script files from desktop
  or file manager onto the main gretl window
- Add drag and drop of data series from a database window into
  the main gretl window (i.e. into the current data set)
- Add general time-series data compaction function (under Sample
  menu)
- Fix various memory-usage bugs revealed by port to Mac OS X
- Fix installation of bcih database so that it works on big-
  endian machines too

03/16/03 version 1.0.6
- minor adjustment to model print output formatting
- fix for correlogram graph (was incompatible with older gnuplot)
- fix a couple of minor gretlcli bugs
- add (optional) LAPACK support for various "advanced"
  features
- fix time-series attributes of data9-1, data9-10
- prevent normal random generator from outputting NaNs