@@ -90,4 +90,6 @@ int gui_open_plugin (const char *plugin, void **handle);
 
 int build_path (const char *dir, const char *fname, char *path, const char *ext);
 
+int get_worksheet_data (const char *fname, int datatype, int append);
+
 #endif /* GUI_UTILS_H */
